@@ -8,6 +8,7 @@ acmacs.r NEWS -- history of user-visible changes.
 ** get number of layers (chart$titers$number_of_layers)
 ** remove layers (flatten) (chart$remove_layers())
 ** clone chart (chart$clone())
+** create new projection with random layout (dimension annealing cannot be used) (chart$new_projection("none", 2))
 
 
 * Changes in 2.6 (2018-07-15)
